Chatform variabel för att ta in en value från användares input som sen ska användas av en message funktion tillsammans med chat-input variabel (läggs till nästa push)

--- a/index.html
+++ b/index.html
@@ -121,6 +121,13 @@
       document.getElementById("reset").addEventListener("click", () => {
         socket.emit("resetGame");
       });
+
+      // Variabler för chatt funktioner som används nedan
+      var chatForm = document.getElementById("chat-form");
+
+      chatForm.addEventListener("submit", function (e) {
+        e.preventDefault();
+      });
     </script>
   </body>
 </html>
