--- a/index.html
+++ b/index.html
@@ -4,12 +4,27 @@
     <title>Socket.IO Tic-Tac-Toe</title>
     <style>
       body {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100vh;
+        margin: 0;
+        position: relative;
         font-family: Arial, sans-serif;
-        text-align: center;
+      }
+      .container {
+        display: flex;
+        gap: 20px;
+      }
+      .game-container {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
       }
       #board {
         display: grid;
         grid-template-columns: repeat(3, 100px);
+        grid-template-rows: repeat(3, 100px);
         grid-gap: 5px;
         margin: 20px auto;
         width: 310px;
@@ -35,27 +50,53 @@
         font-size: 1em;
         cursor: pointer;
       }
+      .chat-container {
+        position: absolute;
+        top: 100px;
+        right: 20px;
+        width: 250px;
+        display: flex;
+        flex-direction: column;
+      }
+      #messages {
+        list-style: none;
+        padding: 0;
+        height: 300px;
+        overflow-y: auto;
+        border: 1px solid #000;
+        background: #f9f9f9;
+      }
+      #messages li {
+        padding: 5px;
+        border-bottom: 1px solid #ddd;
+      }
+      #chat-form {
+        display: flex;
+        margin-top: 10px;
+      }
+      #chat-input {
+        flex-grow: 1;
+        padding: 5px;
+      }
     </style>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
   <body>
-    <div class="container">
-      <div class="game-container">
-        <h1>Välkommen till ULTIMATE Tic-Tac-Toe</h1>
-        <p id="status">Väntar på spelare...</p>
-        <div id="board"></div>
-        <p id="message"></p>
-        <button id="reset">Restart Game</button>
-      </div>
-      <div class="chat-container">
-        <h3>Chat</h3>
-        <ul id="messages"></ul>
-        <form id="chat-form">
-          <input id="chat-input" autocomplete="off" /><button>Send</button>
-        </form>
-      </div>
+    <div class="game-container">
+      <h1>Välkommen till ULTIMATE Tic-Tac-Toe</h1>
+      <p id="status">Väntar på spelare...</p>
+      <div id="board"></div>
+      <p id="message"></p>
+      <button id="reset">Restart Game</button>
+    </div>
+    <div class="chat-container">
+      <h3>Chat</h3>
+      <ul id="messages"></ul>
+      <form id="chat-form">
+        <input id="chat-input" autocomplete="off" /><button>Send</button>
+      </form>
     </div>
     <script src="/socket.io/socket.io.js"></script>
     <script>
@@ -124,9 +165,22 @@
 
       // Variabler för chatt funktioner som används nedan
       var chatForm = document.getElementById("chat-form");
+      var chatInput = document.getElementById("chat-input");
+      var messages = document.getElementById("messages");
 
+      //Tar input från message
       chatForm.addEventListener("submit", function (e) {
         e.preventDefault();
+        if (chatInput.value) {
+          socket.emit("chat message", chatInput.value);
+          chatInput.value = "";
+        }
+      });
+      socket.on("chat message", function (msg) {
+        var item = document.createElement("li");
+        item.textContent = msg;
+        messages.appendChild(item);
+        messages.scrollTop = messages.scrollHeight;
       });
     </script>
   </body>
