Planen för denna lektion: En funktion submitUsername som ska få kod ifall man har inputtat ett username = använda detta username som localstorage och set item och location får bli index.html Ifall fältet är tomt ska den bara ge ett message eller alert att skriva in något.

--- a/start.html
+++ b/start.html
@@ -9,7 +9,12 @@
   <body>
     <div class="container">
       <h1>Vänligen ange username:</h1>
-      <input type="text" />
+      <input type="text" id="username" placeholder="Skriv ditt namn här" />
+      <br />
+      <button onclick="submitUsername()">Joina Spelet</button>
     </div>
+    <script>
+      function submitUsername() {}
+    </script>
   </body>
 </html>
