--- a/index.html
+++ b/index.html
@@ -163,7 +163,8 @@
         socket.emit("resetGame");
       });
 
-      // Variabler för chatt funktioner som används nedan
+      // Variabler för chatt funktioner som används nedan // lade till username
+      var username = localStorage.getItem("username") || "Okänd";
       var chatForm = document.getElementById("chat-form");
       var chatInput = document.getElementById("chat-input");
       var messages = document.getElementById("messages");
@@ -172,7 +173,7 @@
       chatForm.addEventListener("submit", function (e) {
         e.preventDefault();
         if (chatInput.value) {
-          socket.emit("chat message", chatInput.value);
+          socket.emit("chat message", `${username}: ${chatInput.value}`);
           chatInput.value = "";
         }
       });
