Fixat en alert för den som vinner (lite buggig eftersom den kommer sent in) och fixat att ifall X vinner så är det O efter och wise verse. Jag satte "loser" till den som kollar vem som vann. Den får då loser variabeln som används i resetGame.

--- a/index.html
+++ b/index.html
@@ -143,6 +143,7 @@
         document.getElementById("message").textContent = message;
         setTimeout(() => {
           document.getElementById("message").textContent = "";
+          alert(message);
         }, 3000);
       });
 
